...
        
        if let photoDate = photo.createdAt {
            dateLabel.text = longDateFormatter.string(from: photoDate)
        } else {
            dateLabel.text = ""
        }
        likeButton.accessibilityIdentifier = "LikeButton"
        
        setIsLiked(photo.isLiked)
        
        guard let photoURL = URL(string: photo.thumbImageURL) else { return status }
        
        cellImage.kf.indicatorType = .activity
...
